--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    
+    <meta charset="utf-8">
+    <title>Townsville Community Music Centre</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
 </html>
