--- a/Project Plan for TCMC -  Group 16 .html
+++ b/Project Plan for TCMC -  Group 16 .html
@@ -14,7 +14,7 @@
 <h2>Success Evaluation</h2>
 <p> ...</p>
 <h2>Target Audience</h2>
-<p>...</p>
+<p>The target audience is mostly 40+ year olds, who like music of any genre. They are mostly music enthusiasts but sometimes people who are willing to volunteer.</p>
 <h2>Content</h2>
 <p>...</p>
 <h2>Site Flowchart (Structure Diagram)</h2>
