very brief mission statement
I reckon it covers all of the basics, but we'll go over it at our
meeting and if you guys have anything to add we'll discuss your ideas.

--- a/Project Plan for TCMC -  Group 16 .html
+++ b/Project Plan for TCMC -  Group 16 .html
@@ -10,7 +10,7 @@
 <h2>?Group Name?</h2>
 <p><strong>Members:</strong> XXX, YYY, ZZZ</p>
 <h2>Mission Statement</h2>
-  <p>...</p>
+  <p>This website will increase the number of members as well as enthusiastic volunteers to help out during music festivals.</p>
 <h2>Success Evaluation</h2>
 <p> ...</p>
 <h2>Target Audience</h2>
