group name+group members
just added our group name (Group 16) and our group members.

--- a/Project Plan for TCMC -  Group 16 .html
+++ b/Project Plan for TCMC -  Group 16 .html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0126)https://learnjcu.jcu.edu.au/bbcswebdav/pid-1872047-dt-content-rid-2249283_1/courses/15-CP1406_CP2010-CNS_TSV-INT-SP1/plan.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Project Plan for TCMC - ?Group Name?</title>
+<title>Project Plan for TCMC - Group 16</title>
 
 <style type="text/css"></style></head>
 
 <body>
 <h1>CP1406/CP2010 - 2015 - TCMC Project Plan</h1>
-<h2>?Group Name?</h2>
-<p><strong>Members:</strong> XXX, YYY, ZZZ</p>
+<h2>Group 16</h2>
+<p><strong>Members:</strong> Jaison Thyil Thomas, Robert Marsh, Joshua Page, Hendrik Nel, Bradley Boye</p>
 <h2>Mission Statement</h2>
   <p>This website will increase the number of members as well as enthusiastic volunteers to help out during music festivals.</p>
 <h2>Success Evaluation</h2>
