--- a/Project Plan for TCMC -  Group 16 .html
+++ b/Project Plan for TCMC -  Group 16 .html
@@ -12,7 +12,9 @@
 <h2>Mission Statement</h2>
   <p>This website will increase the number of members as well as enthusiastic volunteers to help out during music festivals.</p>
 <h2>Success Evaluation</h2>
-<p> ...</p>
+<p> The success of the website will be evaluated by the amount of new members that have signed up, and also by the amount of people 
+(members and non members) that volunteer to help with future concerts. The success will also be evaluted by the amount of tickets that are being sold to future conncerts. And overall more involvement from musicians.(Concert musicians and House Musicians) 
+</p>
 <h2>Target Audience</h2>
 <p>The target audience is mostly 40+ year olds, who like music of any genre. They are mostly music enthusiasts but sometimes people who are willing to volunteer.</p>
 <h2>Content</h2>
