updated mission statement
just changed the mission statement so that it is accurately reflected in the success evaluation

--- a/Project Plan for TCMC -  Group 16 .html
+++ b/Project Plan for TCMC -  Group 16 .html
@@ -10,7 +10,7 @@
 <h2>Group 16</h2>
 <p><strong>Members:</strong> Jaison Thyil Thomas, Robert Marsh, Joshua Page, Hendrik Nel, Bradley Boye</p>
 <h2>Mission Statement</h2>
-  <p>This website will increase the number of members as well as enthusiastic volunteers to help out during music festivals.</p>
+  <p>This website will increase the number of members, enthusiastic volunteers to help out during music concerts, number of concert tickets sold, and the number of musicians performing at concerts.</p>
 <h2>Success Evaluation</h2>
 <p> The success of the website will be evaluated by the amount of new members that have signed up, and also by the amount of people (members and non members) that volunteer to help with future concerts. The success will also be evaluted by the amount of tickets that are being sold to future conncerts. And overall more involvement from musicians.(Concert musicians and House Musicians) 
 </p>
