--- a/Project Plan for TCMC -  Group 16 .html
+++ b/Project Plan for TCMC -  Group 16 .html
@@ -21,6 +21,6 @@
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p> ...</p>
 <h2>GitHub Repository</h2>
-<p><a href="http://github.com/?" target="_blank">?GitHub Repo Name?</a></p>
+<p><a href="https://github.com/robomartion/CP2010-1406-group-project"</a></p>
 
 </body></html>
