added the site flowchart
i added the site flowchart to the group plan and as a png file.

--- a/Project Plan for TCMC -  Group 16 .html
+++ b/Project Plan for TCMC -  Group 16 .html
@@ -155,7 +155,7 @@
 
 
 <h2>Site Flowchart (Structure Diagram)</h2>
-<p> ...</p>
+<p><img src="../Documents/Unnamed Site 2/flowchart.png" width="878" height="505" alt=""/></p>
 <h2>GitHub Repository</h2>
 <p><a href="https://github.com/robomartion/CP2010-1406-group-project"</a></p>
 
