--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Townsville Community Music Centre</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
 </html>
