tried starting the website in dreamweaver

--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Townsville Community Music Centre</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
-  </head>
+<head>
+<meta charset="utf-8">
+<title>Townsville Community Music Centre</title>
+<link href="styles.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div id="wrapper">
+  <div id="content">
+  <header id="top">
+	<img src="TCMC98Neg.jpg" width="175" height="113" alt=""/>
+    <nav id="mainnav">
+      <ul>
+        <div id="Home"><li><a href="#" class="thispage">Home</a></li></div>
+        <div id="Events"><li><a href="#">Events</a></li></div>
+        <div id="Artists"><li><a href="#">Artists</a></li></div>
+        <div id="About_Us"><li><a href="#">About Us</a></li></div>
+        <li></li>
+      </ul>  
+    </nav>
+  </header>  
+
+</div>
+  <div id="footer"><p>&copy; Copyright 2015 Diggers Beach Volleyball</p>
+</div>
+</div>
+</body>
 </html>
