fixed artist link problem
still have to fix the about us link problem

--- a/artist.html
+++ b/artist.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Townsville Community Music Centre</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
+<link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="wrapper">
@@ -12,10 +13,9 @@
 	<img src="TCMC98Neg.jpg" width="175" height="113" alt=""/>
     <nav id="mainnav">
       <ul>
-        <div id="Home">
-          <li><a href="index.html" class="thispage">Home</a></li></div>
+        <div id="Home"><li><a href="index.html" >Home</a></li></div>
         <div id="Events"><li><a href="Events.html">Events</a></li></div>
-        <div id="Artists"><li><a href="artist.html">Artists</a></li></div>
+        <div id="Artists"><li><a href="artist.html" class="thispage">Artists</a></li></div>
         <div id="About_Us"><li><a href="About us.html">About Us</a></li></div>
         <li></li>
       </ul>  
