--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TCMC - Events</title>
+<title>TCMC - About</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -13,9 +13,9 @@
     <nav id="mainnav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Events.html" class="thispage">Events</a></li>
+        <li><a href="Events.html">Events</a></li>
         <li><a href="Artists.html">Artists</a></li>
-        <li><a href="About.html">About</a></li>
+        <li><a href="About.html" class="thispage">About</a></li>
       </ul>  
     </nav>    
     <div id="VOLUNTEER">VOLUNTEER</div>
