--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Townsville Community Music Centre</title>
+<title>TCMC - Townsville Community Music Centre</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -12,19 +12,22 @@
 	<img src="TCMC98Neg.jpg" width="175" height="113" alt=""/>
     <nav id="mainnav">
       <ul>
-        <div id="Home">
-          <li><a href="index.html" class="thispage">Home</a></li></div>
-        <div id="Events"><li><a href="Events.html">Events</a></li></div>
-        <div id="Artists"><li><a href="artist.html">Artists</a></li></div>
-        <div id="About_Us"><li><a href="About us.html">About Us</a></li></div>
-        <li></li>
+        <li><a href="index.html" class="thispage">Home</a></li>
+        <li><a href="Events.html">Events</a></li>
+        <li><a href="Artists.html">Artists</a></li>
+        <li><a href="About.html">About</a></li>
       </ul>  
-    </nav>
+    </nav>    
+    <div id="VOLUNTEER">VOLUNTEER</div>
+    <div id="BECOME_A_MEMBER">BECOME A MEMBER</div>
+    <div id="ARTIST_SIGN-UP">ARTIST SIGN-UP</div>
+    <div id="BUY_TICKETS">BUY TICKETS</div>
   </header>  
 
 </div>
-  <div id="footer"><p>&copy; Copyright 2015 Diggers Beach Volleyball</p>
-</div>
+<div id="footer">
+	<div id="footer_content"><h2>Contact</h2> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810</div>
+    <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="fblogo.jpg" width="64" height="64" alt=""/></a></div>
 </div>
 </body>
 </html>
