--- a/Single Artist's Page.html
+++ b/Single Artist's Page.html
@@ -10,24 +10,30 @@
   <div id="content">
   <header id="top">
 	<img src="TCMC98Neg.jpg" width="175" height="113" alt=""/>
-    <nav id="mainnav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Events.html">Events</a></li>
-        <li><a href="Artists.html" class="thispage">Artists</a></li>
-        <li><a href="About.html">About</a></li>
-      </ul>  
-    </nav>    
+	<nav id="mainnav">
+	  <ul>
+	    <li><a href="index.html">Home</a></li>
+	    <li><a href="Events.html">Events</a></li>
+	    <li><a href="Artists.html" class="thispage">Artists</a></li>
+	    <li><a href="About.html">About</a></li>
+	    </ul>  
+</nav>    
     <div id="VOLUNTEER">VOLUNTEER</div>
     <div id="BECOME_A_MEMBER">BECOME A MEMBER</div>
     <div id="ARTIST_SIGN-UP">ARTIST SIGN-UP</div>
     <div id="BUY_TICKETS">BUY TICKETS</div>
   </header>  
-
 </div>
-<div id="footer">
-	<div id="footer_content"><h2>Contact</h2> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810</div>
+<div id ="body"></div>
+&lt;img src=&quot;../Documents/Unnamed Site 2/Stokes.jpg&quot; width=&quot;600&quot; height=&quot;254&quot; alt=&quot;&quot;/&gt;
+<div id="footer"><div id="footer_content">contact: <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810</div>
     <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="fblogo.jpg" width="64" height="64" alt=""/></a></div>
 </div>
+<ul>
+  <img src="../Documents/Unnamed Site 2/Stokes.jpg" width="600" height="254" alt=""/>
+  <p> The Stokes-Nicholson Big Band is a not for profit community 22 piece Big Band playing Jazz and Big Band music. 
+For more information contact Les Nicholson on 0417 637 893 </p>
+</ul>
 </body>
+
 </html
