fixed the photo issue
the photo should now show up on the page

--- a/Single Artist's Page.html
+++ b/Single Artist's Page.html
@@ -30,7 +30,7 @@
     <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="fblogo.jpg" width="64" height="64" alt=""/></a></div>
 </div>
 <ul>
-  <img src="../Documents/Unnamed Site 2/Stokes.jpg" width="600" height="254" alt=""/>
+  <img src="stokes.jpg" width="600" height="254" alt=""/>
   <p> The Stokes-Nicholson Big Band is a not for profit community 22 piece Big Band playing Jazz and Big Band music. 
 For more information contact Les Nicholson on 0417 637 893 </p>
 </ul>
