--- a/Single Artist's Page.html
+++ b/Single Artist's Page.html
@@ -25,15 +25,18 @@
   </header>  
 </div>
 <div id ="body"></div>
-&lt;img src=&quot;../Documents/Unnamed Site 2/Stokes.jpg&quot; width=&quot;600&quot; height=&quot;254&quot; alt=&quot;&quot;/&gt;
-<div id="footer"><div id="footer_content">contact: <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810</div>
-    <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="fblogo.jpg" width="64" height="64" alt=""/></a></div>
+
+<div id="footer">
+<div id="footer_content"><h2>Contact</h2>  <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810</div>
+  <img src="fblogo.jpg" width="64" height="64" alt=""/>    <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"></a></div>
 </div>
 <ul>
-  <img src="stokes.jpg" width="600" height="254" alt=""/>
+  <img src="stokes.jpg" alt="" width="600" height="254" id="image1"/>
   <p> The Stokes-Nicholson Big Band is a not for profit community 22 piece Big Band playing Jazz and Big Band music. 
 For more information contact Les Nicholson on 0417 637 893 </p>
+
 </ul>
+
 </body>
 
 </html
