slight changes to website
started adjusting the website based on the comp robert made

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="wrapper">
   <div id="content">
   <header id="top">
-	<img src="TCMC98Neg.jpg" width="175" height="113" alt=""/>
+	<img src="logowhite.png" width="270" height="193" alt=""/>
     <nav id="mainnav">
       <ul>
         <li><a href="index.html" class="thispage">Home</a></li>
@@ -18,13 +18,20 @@
         <li><a href="About.html">About</a></li>
       </ul>  
     </nav>    
-
+    <div id="BUY_TICKETS">Buy Tickets</div>
+    <div id="PLAY_FOR_US">Play for Us</div>
+    <div id="ARTIST_SIGN-UP">Become a Member</div>
+    <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
   </header>  
 
-</div>
-<div id="footer">
-	<div id="footer_content"><h2>Contact</h2> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810</div>
-    <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="fblogo.jpg" width="64" height="64" alt=""/></a></div>
-</div>
+<footer id="footer">
+	<div id="footer_content1">
+         <h2>Contact</h2> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810
+	</div> 
+          <div id="sponsor0"><a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="fblogo.jpg" width="64" height="64" alt=""/></a> 
+         </div>
+</footer>
+</div>     
+	</div>   
 </body>
 </html>
