--- a/index.html
+++ b/index.html
@@ -8,30 +8,35 @@
 <body>
 <div id="wrapper">
   <div id="content">
-  <header id="top">
-	<img src="logowhite.png" width="270" height="193" alt=""/>
-    <nav id="mainnav">
-      <ul>
-        <li><a href="index.html" class="thispage">Home</a></li>
-        <li><a href="Events.html">Events</a></li>
-        <li><a href="Artists.html">Artists</a></li>
-        <li><a href="About.html">About</a></li>
-      </ul>  
-    </nav>    
-    <div id="BUY_TICKETS">Buy Tickets</div>
-    <div id="PLAY_FOR_US">Play for Us</div>
-    <div id="ARTIST_SIGN-UP">Become a Member</div>
-    <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
-  </header>  
+    <header id="top"> <img src="logowhite.png" width="270" height="193" alt=""/>
+      <nav id="mainnav">
+        <ul>
+          <li><a href="index.html" class="thispage">Home</a></li>
+          <li><a href="Events.html">Events</a></li>
+          <li><a href="Artists.html">Artists</a></li>
+          <li><a href="About.html">About</a></li>
+        </ul>
+      </nav>
+      <div id="BUY_TICKETS">Buy Tickets</div>
+      <div id="PLAY_FOR_US">Play for Us</div>
+      <div id="ARTIST_SIGN-UP">Become a Member</div>
+      <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
+    </header>
+  </div>
+ <div id="welcome_img"><img src="BlackBox.jpg" width="1020" height="400" alt=""/></div>
+ <body1 id="body1"> 
+ <div id="welcome">
+ <strong><h2>Welcome to the Townsville Community Centre</h2></strong>
+ We are a non-for-profit organisation operated by people <strong>like you</strong>.
+      <div id="BECOME_A_VOLUNTEER_1">Become a Volunteer</div>
+      <div id="PLAY_FOR_US_1">Play for Us</div>
+ </div>
+ </body1> 
 
 <footer id="footer">
-	<div id="footer_content1">
-         <h2>Contact</h2> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810
-	</div> 
-          <div id="sponsor0"><a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="fblogo.jpg" width="64" height="64" alt=""/></a> 
-         </div>
+
 </footer>
 </div>     
-	</div>   
+</div>   
 </body>
 </html>
