--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
 <title>TCMC - Townsville Community Music Centre</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="wrapper">
   <div id="content">
-    <header id="top"> <img src="logowhite.png" width="270" height="193" alt=""/>
+    <header id="top"> <a href="index.html"><img src="pictures/logowhite.png" width="270" height="193" alt=""/></a>
       <nav id="mainnav">
         <ul>
           <li><a href="index.html" class="thispage">Home</a></li>
@@ -18,22 +19,62 @@
         </ul>
       </nav>
       <div id="BUY_TICKETS">Buy Tickets</div>
-      <div id="PLAY_FOR_US">Play for Us</div>
+      <div id="PLAY_FOR_US">Play For Us</div>
       <div id="ARTIST_SIGN-UP">Become a Member</div>
       <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
     </header>
   </div>
- <div id="welcome_img"><img src="BlackBox.jpg" width="1020" height="400" alt=""/></div>
+ <div id="welcome_img"><img src="pictures/BlackBox.jpg" width="1020" height="350" alt=""/></div>
  <body1 id="body1"> 
  <div id="welcome">
- <strong><h2>Welcome to the Townsville Community Centre</h2></strong>
- We are a non-for-profit organisation operated by people <strong>like you</strong>.
+<strong><h2><u>Welcome to the Townsville Community Centre</u></h2></strong>
+<div id="body1_top_text"> We are a non-for-profit organisation operated by people <strong>like you</strong> giving <br> the spotlight to artists <strong>like you</strong>.</div>
       <div id="BECOME_A_VOLUNTEER_1">Become a Volunteer</div>
-      <div id="PLAY_FOR_US_1">Play for Us</div>
+      <div id="PLAY_FOR_US_1">Play For Us</div>
+      
+ <div id="body1_bottom_text">If you have other obligations but still want to help out <strong><u>become a member</u></strong> <br> to support us and get up to a <strong>50% discount on tickets</strong>
+ </div>
  </div>
  </body1> 
+ 
+<body2 id="body2">
+<div id="body2_background_img">  <img src="pictures/Wassa01.png" width="680.5" height="350.5" alt=""/> </div>
+<div id="body2_text1"> <h2> <u>Featured Artist:</u></h2> </div> <div id="body2_text1_2"> <br> Wassa </div>
+<div id="body2_text2"> Playing on the 31st of May </div>
+</body2>
 
+ <div id="body3_background"><img src="pictures/large_white_box_grayborder.jpg" width="1699" height="300" alt=""/></div>
+ <body3 id="body3"> 
+ <div id="welcome">
+ 
+<strong><h2><u>Upcoming Events:</u></h2></strong>
+
+<div id="event1"> <img src="pictures/Layer 3.jpg" width="200" height="200" alt=""/> </div>
+<div id="event1_text"> <strong>AVIA AND FRIENDS</strong> <br>2pm Sunday 14 May<br>at C2 (Townsville Civic Centre)</div>
+<div id="BUY_TICKETS_BOTTOM_1"><strong>Buy Tickets</strong></div>
+
+<div id="event2"> <img src="pictures/Harbourside300.jpg" width="200" height="200" alt=""/> </div>
+<div id="event2_text"> <strong>Dream Serenade</strong> <br>2pm Sunday 17 May<br>at C2 (Townsville Civic Centre)</div>
+<div id="BUY_TICKETS_BOTTOM_2"><strong>Buy Tickets</strong></div>
+
+<div id="event3"> <img src="pictures/Home Event SMALL1.jpg" width="200" height="200" alt=""/> </div>
+<div id="event3_text"> <strong>Townsville Concert Band</strong> <br>2pm Sunday 28 May<br>at C2 (Townsville Civic Centre)</div>
+<div id="BUY_TICKETS_BOTTOM_3"><strong>Buy Tickets</strong></div>
+
+ </div>
+ </body3>
+ 
 <footer id="footer">
+<div id="contact"><strong><h2>Contact</h2></strong> <br> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
+<div id="fblogo"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
+
+<div id="links1"> Artists<br>Events<br>About </div> <div id="links2"> Buy Tickets<br>Become a Volunteer<br>Become a member<br>Play for Us </div>
+</div>
+<div id="sponsors"> <strong><h2> Sponsors</h2> </strong> 
+<div id="sponsor1"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
+<div id="sponsor2"> <a href="https://www.qld.gov.au/index.html"><img src="pictures/qg-coa-ogp.png" width="86" height="86" alt=""/></a> </div>
+<div id="sponsor3"> <img src="pictures/1525593_1_O.png" width="100" height="80" alt=""/> </div>
+ </div>
 
 </footer>
 </div>     
