--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 <div id="contact"><strong><h2>Contact</h2></strong> <br> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
 <div id="fblogo"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
 
-<div id="links1"> Artists<br>Events<br>About </div> <div id="links2"> Buy Tickets<br>Become a Volunteer<br>Become a member<br>Play for Us </div>
+<div id="links1"> <a href="Artists.html" class="nav-link">Artists</a><br><a href="Events.html" class="nav-link">Events</a><br>
+  <a href="About.html" class="nav-link">About</a></div> 
+<div id="links2"> Buy Tickets<br>Become a Volunteer<br>Become a member<br>Play for Us </div>
 </div>
 <div id="sponsors"> <strong><h2> Sponsors</h2> </strong> 
 <div id="sponsor1"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
