changes from prac

--- a/Project Plan for TCMC -  Group 16 .html
+++ b/Project Plan for TCMC -  Group 16 .html
@@ -36,8 +36,8 @@
     
 <p>The target audience is:</p>
 	<ul>
-    	<li>young adults to adults (aged 20-45)</li>
-        <li>the site will be easy to navigate, easy to read, and it will have relevant content</li>
+    	<li>young adults to adults (20-45)</li>
+        <li>the site will be designed so that every page is one click away and the text will be easy to read through the use of large text and font that compliment a classical music theme.</li>
 	</ul>
 
     
