--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <div id="welcome_img"><img src="pictures/BlackBox.jpg" width="1020" height="350" alt=""/></div>
  <body1 id="body1"> 
  <div id="welcome">
-<strong><h2><u>Welcome to the Townsville Community Centre</u></h2></strong>
+<strong><h2>Welcome to the Townsville Community Centre</h2></strong>
 <div id="body1_top_text"> We are a non-for-profit organisation operated by people <strong>like you</strong> giving <br> the spotlight to artists <strong>like you</strong>.</div>
       <div id="BECOME_A_VOLUNTEER_1">Become a Volunteer</div>
       <div id="PLAY_FOR_US_1">Play For Us</div>
@@ -39,7 +39,7 @@
  
 <body2 id="body2">
 <div id="body2_background_img">  <img src="pictures/Wassa01.png" width="680.5" height="350.5" alt=""/> </div>
-<div id="body2_text1"> <h2> <u>Featured Artist:</u></h2> </div> <div id="body2_text1_2"> <br> Wassa </div>
+<div id="body2_text1"> <h2> Featured Artist:</h2> </div> <div id="body2_text1_2"> <br> Wassa </div>
 <div id="body2_text2"> Playing on the 31st of May </div>
 </body2>
 
@@ -47,7 +47,7 @@
  <body3 id="body3"> 
  <div id="welcome">
  
-<strong><h2><u>Upcoming Events:</u></h2></strong>
+<strong><h2>Upcoming Events:</h2></strong>
 
 <div id="event1"> <img src="pictures/Layer 3.jpg" width="200" height="200" alt=""/> </div>
 <div id="event1_text"> <strong>AVIA AND FRIENDS</strong> <br>2pm Sunday 14 May<br>at C2 (Townsville Civic Centre)</div>
