--- a/Artists.html
+++ b/Artists.html
@@ -9,7 +9,7 @@
 <body>
 <div id="wrapper">
   <div id="content">
-    <header id="top"> <a href="index.html"><img src="pictures/logowhite.png" width="200" height="123" alt=""/></a>
+    <header id="top"> <a href="index.html"><img src="pictures/logowhite.png" width="270" height="193" alt=""/></a>
       <nav id="mainnav">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -18,31 +18,27 @@
           <li><a href="About.html">About</a></li>
         </ul>
       </nav>
-      
-      <div id="second_nav">
-          <div id="BUY_TICKETS">Buy Tickets</div>
-          <div id="PLAY_FOR_US">Play For Us</div>
-          <div id="BECOME_A_MEMBER">Become a Member</div>
-          <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
-      </div>
+      <div id="BUY_TICKETS">Buy Tickets</div>
+      <div id="PLAY_FOR_US">Play For Us</div>
+      <div id="ARTIST_SIGN-UP">Become a Member</div>
+      <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
     </header>
   </div>
   
- <div id="artists_background0"><img src="pictures/BlackBox.jpg" width="1692" height="350" alt=""/></div>
- <div id="artists_background1"><img src="pictures/large_white_box_grayborder.jpg" width="800" height="255" alt=""/></div>
+ <div id="artists_background0"><img src="pictures/BlackBox.jpg" width="1700" height="350" alt=""/></div>
+ <div id="artists_background1"><img src="pictures/large_white_box_grayborder.jpg" width="1640" height="300" alt=""/></div>
  
 <body1 id="body1_artists">
 
 <div id="artists_artist1"> <img src="pictures/Harbourside.jpg" width="200" height="200" alt=""/> </div>
 <div id="artist_name">
-  <h3>Harbourside Duo</h3>
+  <h2>Harbourside Duo</h2>
   
   <div id="artists_events_text">
-      <h4>Upcoming Events:</h4>
-      <div id="event1_details"> <u>Dream Serenade</u> </div>
-      <div id="more_info1"> <u> More Info </u> </div>
-  </div>
- <div id="artists_background3"><img src="pictures/large_white_box_grayborder.jpg" width="800" height="255" alt=""/></div>  
+  <h3>Upcoming Events:</h3>
+  <div id="event1_details"> Dream Serenade </div>
+    </div>
+  
 </div>
 </body1> 
  
@@ -50,7 +46,7 @@
 <div id="contact"><strong><h2>Contact</h2></strong> <br> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
 <div id="fblogo"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
 
-<div id="links1"><a href="index.html">Home</a><br> Artists<br>Events<br>About </div> <div id="links2"> Buy Tickets<br>Become a Volunteer<br>Become a member<br>Play for Us </div>
+<div id="links1"> Artists<br>Events<br>About </div> <div id="links2"> Buy Tickets<br>Become a Volunteer<br>Become a member<br>Play for Us </div>
 </div>
 <div id="sponsors"> <strong><h2> Sponsors</h2> </strong> 
 <div id="sponsor1"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
