the timeline on the about page
lost what i did on tuesdays prac on the about page. i just added the
timeline.

--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
     <div id="ARTIST_SIGN-UP">ARTIST SIGN-UP</div>
     <div id="BUY_TICKETS">BUY TICKETS</div>
   </header>  
-
+<dkv class="image5"><img src="pictures/timeline.jpg" alt="" width="64" height="64" class="image5"/> </div>
 </div>
 <div id="footer">
 	<div id="footer_content"><h2>Contact</h2> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810</div>
