fixed the about page

--- a/About.html
+++ b/About.html
@@ -23,7 +23,23 @@
     <div id="ARTIST_SIGN-UP">ARTIST SIGN-UP</div>
     <div id="BUY_TICKETS">BUY TICKETS</div>
   </header>  
-<dkv class="image5"><img src="pictures/timeline.jpg" alt="" width="64" height="64" class="image5"/> </div>
+  </body>
+<div id="artists_background0"></div>
+ <img src="pictures/untitled-1 2.jpg" alt="" width="500" height="237" class="image2" />
+<body1 id="body1_artists">
+<img src="pictures/old-music.jpg" alt="" width="500" height="237" class="image4"/>
+<h2 class="body_content2"> The Townsville Community Music Centre celebrated its 30th year in 2013. </h2>
+<p class="body_content3"> It has been constantly changing over the years to keep up to date with the musical tastes and needs of the Townsville community. As part of the relocation of the Music Centre to the Civic Theatre, Bronia Renison and Jean Dartnall, both librarians, have assessed the old collection of sheet music, books and recorded music which the centre has been storing, unused, for many years. Sometimes older things have to be discarded to make way for the new, but the Music Centre is aware that older material may still have value. <br>
+<br>
+<br>
+The National Library of Australia has an online catalogue (TROVE) that lists not only its own holdings but also information about items held by many other libraries around Australia. Using this catalogue Bronia and Jean have identified at least 150 items of music that are not held by any of the country's major libraries. These items have been donated to the National Library to include in their collection and thus made available to all historians and musicians.<br>
+<br> 
+<br>
+Also discovered in the old collection were some pieces relevant to North Queensland. Local musicians performed these at a musical social afternoon on Sunday April 21st in C2 at the Civic Theatre. The remaining sheet music, books and CDs were put on display and distributed free of charge to the local music community. </p>
+</body1>
+</div>
+
+<div class="image5"><img src="pictures/timeline.jpg" alt="" width="64" height="64" class="image5"/> </div>
 </div>
 <div id="footer">
 	<div id="footer_content"><h2>Contact</h2> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810</div>
