made some changes to the html structure

--- a/About.html
+++ b/About.html
@@ -9,22 +9,26 @@
 <div id="wrapper">
   <div id="content">
   <header id="top">
-	<img src="TCMC98Neg.jpg" width="175" height="113" alt=""/>
-    <nav id="mainnav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Events.html">Events</a></li>
-        <li><a href="Artists.html">Artists</a></li>
-        <li><a href="About.html" class="thispage">About</a></li>
-      </ul>  
-    </nav>    
-    <div id="VOLUNTEER">VOLUNTEER</div>
-    <div id="BECOME_A_MEMBER">BECOME A MEMBER</div>
-    <div id="ARTIST_SIGN-UP">ARTIST SIGN-UP</div>
-    <div id="BUY_TICKETS">BUY TICKETS</div>
+    <a href="index.html"><img src="pictures/logowhite.png" width="200" height="123" alt=""/></a>
+      <nav id="mainnav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Events.html">Events</a></li>
+          <li><a href="Artists.html">Artists</a></li>
+          <li><a href="About.html" class="thispage">About</a></li>
+        </ul>
+      </nav>
+      
+      <div id="second_nav">
+          <div id="BUY_TICKETS">Buy Tickets</div>
+          <div id="PLAY_FOR_US">Play For Us</div>
+          <div id="BECOME_A_MEMBER">Become a Member</div>
+          <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
+      </div>
+      
   </header>  
-  </body>
-<div id="artists_background0"></div>
+</div>  
+
  <img src="pictures/untitled-1 2.jpg" alt="" width="500" height="237" class="image2" />
 <body1 id="body1_artists">
 <img src="pictures/old-music.jpg" alt="" width="500" height="237" class="image4"/>
@@ -37,13 +41,25 @@ The National Library of Australia has an online catalogue (TROVE) that lists not
 <br>
 Also discovered in the old collection were some pieces relevant to North Queensland. Local musicians performed these at a musical social afternoon on Sunday April 21st in C2 at the Civic Theatre. The remaining sheet music, books and CDs were put on display and distributed free of charge to the local music community. </p>
 </body1>
-</div>
+
 
 <div class="image5"><img src="pictures/timeline.jpg" alt="" width="64" height="64" class="image5"/> </div>
+
+<footer id="footer">
+<div id="contact"><strong><h2>Contact</h2></strong> <br> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
+<div id="fblogo"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
+
+<div id="links1"><a href="index.html">Home</a><br> <a href="Artists.html" class="nav-link">Artists</a><br><a href="Events.html" class="nav-link">Events</a><br>
+  <a href="About.html" class="nav-link">About</a></div> 
+<div id="links2"> Buy Tickets<br>Become a Volunteer<br>Become a member<br>Play for Us </div>
 </div>
-<div id="footer">
-	<div id="footer_content"><h2>Contact</h2> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810</div>
-    <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="fblogo.jpg" width="64" height="64" alt=""/></a></div>
+<div id="sponsors"> <strong><h2> Sponsors</h2> </strong> 
+<div id="sponsor1"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
+<div id="sponsor2"> <a href="https://www.qld.gov.au/index.html"><img src="pictures/qg-coa-ogp.png" width="86" height="86" alt=""/></a> </div>
+<div id="sponsor3"> <img src="pictures/1525593_1_O.png" width="100" height="80" alt=""/> </div>
+ </div>
+
+</footer>
 </div>
 </body>
 </html
