Revert "another minor change."
This reverts commit 893644488aa33522d50a5785899c004123ef550d.

--- a/About.html
+++ b/About.html
@@ -30,7 +30,7 @@
 </div>  
 
  <img src="pictures/untitled-1 2.jpg" alt="" width="500" height="237" class="image2" />
-<body1 id="body1_aboutus_page">
+<body1 id="body1_artists">
 <img src="pictures/old-music.jpg" alt="" width="500" height="237" class="image4"/>
 <h2 class="body_content2"> The Townsville Community Music Centre celebrated its 30th year in 2013. </h2>
 <p class="body_content3"> It has been constantly changing over the years to keep up to date with the musical tastes and needs of the Townsville community. As part of the relocation of the Music Centre to the Civic Theatre, Bronia Renison and Jean Dartnall, both librarians, have assessed the old collection of sheet music, books and recorded music which the centre has been storing, unused, for many years. Sometimes older things have to be discarded to make way for the new, but the Music Centre is aware that older material may still have value. <br>
