linked about,artists,events,home
the about,artists,events, and home pages all link to each other in the
header navigation and footer navigation

--- a/Artists.html
+++ b/Artists.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
+
 <title>TCMC - Townsville Community Music Centre</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="wrapper">
   <div id="content">
-    <header id="top"> <a href="index.html"><img src="pictures/logowhite.png" width="200" height="123" alt=""/></a>
+    <header id="top">
+    <a href="index.html"><img src="pictures/logowhite.png" width="200" height="123" alt=""/></a>
       <nav id="mainnav">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -25,6 +26,8 @@
           <div id="BECOME_A_MEMBER">Become a Member</div>
           <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
       </div>
+      
+    
     </header>
   </div>
   
@@ -46,16 +49,19 @@
 </div>
 </body1> 
  
-<footer id="footer">
-<div id="contact"><strong><h2>Contact</h2></strong> <br> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
-<div id="fblogo"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
+<footer id="footer3">
+<div id="contact_artists"><strong><h2>Contact</h2></strong>Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
+<div id="fblogo_artists"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
 
-<div id="links1"><a href="index.html">Home</a><br> Artists<br>Events<br>About </div> <div id="links2"> Buy Tickets<br>Become a Volunteer<br>Become a member<br>Play for Us </div>
+<div id="links1_artists"><a href="index.html">Home</a><br> 
+  <a href="Events.html">Events</a><br>
+  <a href="Artists.html">Artists</a><br>
+  <a href="About.html">About</a></div> <div id="links2_artists"> Play For Us<br>Buy Tickets<br>Become a Volunteer<br>Become a Member </div>
 </div>
-<div id="sponsors"> <strong><h2> Sponsors</h2> </strong> 
-<div id="sponsor1"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
-<div id="sponsor2"> <a href="https://www.qld.gov.au/index.html"><img src="pictures/qg-coa-ogp.png" width="86" height="86" alt=""/></a> </div>
-<div id="sponsor3"> <img src="pictures/1525593_1_O.png" width="100" height="80" alt=""/> </div>
+<div id="sponsors_artists"> <strong><h2> Sponsors</h2> </strong> 
+<div id="sponsor1_artists"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
+<div id="sponsor2_artists"> <a href="https://www.qld.gov.au/index.html"><img src="pictures/qg-coa-ogp.png" width="86" height="86" alt=""/></a> </div>
+<div id="sponsor3_artists"> <img src="pictures/1525593_1_O.png" width="100" height="80" alt=""/> </div>
  </div>
 
 </footer>
