--- a/About.html
+++ b/About.html
@@ -45,18 +45,18 @@ Also discovered in the old collection were some pieces relevant to North Queensl
 
 <div class="image5"><img src="pictures/timeline.jpg" alt="" width="64" height="64" class="image5"/> </div>
 
-<footer id="footer">
-<div id="contact"><strong><h2>Contact</h2></strong> <br> Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
-<div id="fblogo"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
+<footer id="footer2">
+<div id="contact_about"><strong><h2 class="footer2_contact">Contact</h2></strong>  Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
+<div id="fblogo_about"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
 
-<div id="links1"><a href="index.html">Home</a><br> <a href="Artists.html" class="nav-link">Artists</a><br><a href="Events.html" class="nav-link">Events</a><br>
+<div id="links1_about"><a href="index.html">Home</a><br> <a href="Events.html" class="nav-link">Events</a><br><a href="Artists.html" class="nav-link">Artists</a><br>
   <a href="About.html" class="nav-link">About</a></div> 
-<div id="links2"> Buy Tickets<br>Become a Volunteer<br>Become a member<br>Play for Us </div>
+<div id="links2_about"> Play For Us<br>Buy Tickets<br>Become a Volunteer<br>Become a Member </div>
 </div>
-<div id="sponsors"> <strong><h2> Sponsors</h2> </strong> 
-<div id="sponsor1"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
-<div id="sponsor2"> <a href="https://www.qld.gov.au/index.html"><img src="pictures/qg-coa-ogp.png" width="86" height="86" alt=""/></a> </div>
-<div id="sponsor3"> <img src="pictures/1525593_1_O.png" width="100" height="80" alt=""/> </div>
+<div id="sponsors_about"> <strong><h2> Sponsors</h2> </strong> 
+<div id="sponsor1_about"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
+<div id="sponsor2_about"> <a href="https://www.qld.gov.au/index.html"><img src="pictures/qg-coa-ogp.png" width="86" height="86" alt=""/></a> </div>
+<div id="sponsor3_about"> <img src="pictures/1525593_1_O.png" width="100" height="80" alt=""/> </div>
  </div>
 
 </footer>
