content for home,events,artists,about = done
only thing not added is the feeder page reference on the home page. and
the play for us,buy tickets,become a volunteer, and become a member
links dont work because the pages haven't been created yet.

--- a/Artists.html
+++ b/Artists.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>TCMC - Townsville Community Music Centre</title>
+<title>TCMC - Artists</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -31,24 +31,37 @@
     </header>
   </div>
   
- <div id="artists_background0"><img src="pictures/BlackBox.jpg" width="1692" height="350" alt=""/></div>
- <div id="artists_background1"><img src="pictures/large_white_box_grayborder.jpg" width="800" height="255" alt=""/></div>
- 
-<body1 id="body1_artists">
+ <div id="artists_background0"><img src="pictures/BlackBox.jpg" width="1692" height="900" alt=""/></div>
+ <div id="artists_background1"><img src="pictures/large_white_box_grayborder.jpg" width="1625" height="400" alt=""/></div>
 
-<div id="artists_artist1"> <img src="pictures/Harbourside.jpg" width="200" height="200" alt=""/> </div>
+<body1 id="body1_artists">
+<div id="artists_artist1"> <img src="pictures/Layer 3.jpg" width="350" height="350" alt="aviva_quartet_group_photo.jpg"/> </div>
 <div id="artist_name">
-  <h3>Harbourside Duo</h3>
-  
+  <h3>Aviva Quartet</h3>  
   <div id="artists_events_text">
       <h4>Upcoming Events:</h4>
-      <div id="event1_details"> <u>Dream Serenade</u> </div>
+      <div id="event1_details"> <u>Aviva String Quartet</u> </div>
       <div id="more_info1"> <u> More Info </u> </div>
-  </div>
- <div id="artists_background3"><img src="pictures/large_white_box_grayborder.jpg" width="800" height="255" alt=""/></div>  
+  </div>  
 </div>
 </body1> 
+
+ <div id="artists_background3"><img src="pictures/large_white_box_grayborder.jpg" width="1625" height="400" alt=""/></div>
  
+<body2 id="body2_artists">
+<div id="artists_artist2"> <img src="pictures/Aquapella01.jpg" width="350" height="350" alt="aquapella_group_photo.jpg"/> </div>
+<div id="artist_name2">
+  <h3>Aquapella</h3>  
+  <div id="artists_events_text2">
+      <h4>Upcoming Events:</h4>
+      <div id="event1_details2"> N/A </div>
+      <div id="more_info2"> <u> More Info </u> </div>
+  </div>  
+</div>
+</body2> 
+
+
+
 <footer id="footer3">
 <div id="contact_artists"><strong><h2>Contact</h2></strong>Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
 <div id="fblogo_artists"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
