--- a/Events.html
+++ b/Events.html
@@ -24,12 +24,39 @@
           <div id="PLAY_FOR_US">Play For Us</div>
           <div id="BECOME_A_MEMBER">Become a Member</div>
           <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
-      </div>
-      
-    
+      </div>    
   </header>  
-
 </div>
+
+ <div id="artists_background0"><img src="pictures/BlackBox.jpg" width="1692" height="900" alt=""/></div>
+ <div id="artists_background1"><img src="pictures/large_white_box_grayborder.jpg" width="1625" height="400" alt=""/></div>
+
+<body1 id="body1_events">
+<div id="events_events1"> <img src="pictures/Harbourside300.jpg" width="350" height="350" alt="aviva_quartet_group_photo.jpg"/> </div>
+<div id="events_name">
+  <h3>Dream Serenade</h3>  
+  <div id="events_artist_text">
+      <h4>Artists:</h4>
+      <div id="artist1_details"> <u>Harbourside Duo</u> </div>
+      <div id="more_info2"> <u> More Info </u> </div>
+  </div>  
+</div>
+</body1> 
+
+ <div id="artists_background3"><img src="pictures/large_white_box_grayborder.jpg" width="1625" height="400" alt=""/></div>
+ 
+<body2 id="body2_events">
+<div id="events_events2"> <img src="pictures/Oompahlogo600.png" width="350" height="350" alt="aquapella_group_photo.jpg"/> </div>
+<div id="events_name2">
+  <h3>A Taste Of Bavaria</h3>  
+  <div id="events_artist_text2">
+      <h4>Artists:</h4>
+      <div id="artist1_details2">Die Frankfurter Oompah Band </div>
+      <div id="more_info4"> <u> More Info </u> </div>
+  </div>  
+</div>
+</body2> 
+
 <footer id="footer4">
 <div id="contact_events"><strong><h2>Contact</h2></strong>Phone: 07 4724 2086 <br> Mobile: 0402 255 182 <br> Email Address: admin@townsvillemusic.org.au <br> Postal Address: PO Box 1006, Townsville, Qld 4810 <br> Street Address: Townsville Civic Theatre, 41 Boundary Street, Townsville, Qld 4810 
 <div id="fblogo_events"> <a href="https://www.facebook.com/pages/Townsville-Community-Music-Centre/159636880763534?fref=ts"><img src="pictures/fblogo.jpg" width="64" height="64" alt=""/></a></div>
