PHP pages need coding with PHP
just made these using the current html pages

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <nav id="mainnav">
         <ul>
           <li><a href="index.html" class="thispage">Home</a></li>
-          <li><a href="Events.html">Events</a></li>
-          <li><a href="Artists.html">Artists</a></li>
+          <li><a href="Events.php">Events</a></li>
+          <li><a href="Artists.php">Artists</a></li>
           <li><a href="About.html">About</a></li>
         </ul>
       </nav>
