become a member page is created and linked

--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
       <div id="second_nav">
           <div id="BUY_TICKETS">Buy Tickets</div>
           <div id="PLAY_FOR_US">Play For Us</div>
-          <div id="BECOME_A_MEMBER">Become a Member</div>
+          <div id="BECOME_A_MEMBER"><a href="Become_a_member.html">Become a Member</a></div>
           <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
       </div>
       
@@ -51,7 +51,8 @@ Also discovered in the old collection were some pieces relevant to North Queensl
 
 <div id="links1_about"><a href="index.html">Home</a><br> <a href="Events.html" class="nav-link">Events</a><br><a href="Artists.html" class="nav-link">Artists</a><br>
   <a href="About.html" class="nav-link">About</a></div> 
-<div id="links2_about"> Play For Us<br>Buy Tickets<br>Become a Volunteer<br>Become a Member </div>
+<div id="links2_about"> Play For Us<br>Buy Tickets<br>Become a Volunteer<br>
+  <a href="Become_a_member.html">Become a Member</a></div>
 </div>
 <div id="sponsors_about"> <strong><h2> Sponsors</h2> </strong> 
 <div id="sponsor1_about"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
