--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="second_nav">
           <div id="BUY_TICKETS">Buy Tickets</div>
           <div id="PLAY_FOR_US">Play For Us</div>
-          <div id="BECOME_A_MEMBER">Become a Member</div>
+          <div id="BECOME_A_MEMBER"><a href="Become_a_member.html">Become a Member</a></div>
           <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
       </div>
       
@@ -38,7 +38,7 @@
       <div id="BECOME_A_VOLUNTEER_1">Become a Volunteer</div>
       <div id="PLAY_FOR_US_1">Play For Us</div>
       
- <div id="body1_bottom_text">If you have other obligations but would still like to help out, <strong><u>become a member</u></strong> to <br>support us and get up to a <strong>50% discount on tickets</strong>
+ <div id="body1_bottom_text">If you have other obligations but would still like to help out, <strong><u><a href="Become a Member/Become_a_member.html">become a member</a></u></strong> to <br>support us and get up to a <strong>50% discount on tickets</strong>
  </div>
  </div>
  </body1> 
@@ -76,7 +76,8 @@
 
 <div id="links1"><a href="index.html">Home</a><br> <a href="Events.html" class="nav-link">Events</a><br><a href="Artists.html" class="nav-link">Artists</a><br>
   <a href="About.html" class="nav-link">About</a></div> 
-<div id="links2">Play For Us<br>Buy Tickets<br>Become a Volunteer<br>Become a Member </div>
+<div id="links2">Play For Us<br>Buy Tickets<br>Become a Volunteer<br>
+  <a href="Become_a_member.html">Become a Member</a></div>
 </div>
 <div id="sponsors"> <strong><h2> Sponsors</h2> </strong> 
 <div id="sponsor1"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
