--- a/Artists.html
+++ b/Artists.html
@@ -23,7 +23,7 @@
       <div id="second_nav">
           <div id="BUY_TICKETS">Buy Tickets</div>
           <div id="PLAY_FOR_US">Play For Us</div>
-          <div id="BECOME_A_MEMBER">Become a Member</div>
+          <div id="BECOME_A_MEMBER"><a href="Become_a_member.html">Become a Member</a></div>
           <div id="BECOME_A_VOLUNTEER">Become a Volunteer</div>
       </div>
       
@@ -69,7 +69,8 @@
 <div id="links1_artists"><a href="index.html">Home</a><br> 
   <a href="Events.html">Events</a><br>
   <a href="Artists.html">Artists</a><br>
-  <a href="About.html">About</a></div> <div id="links2_artists"> Play For Us<br>Buy Tickets<br>Become a Volunteer<br>Become a Member </div>
+  <a href="About.html">About</a></div> <div id="links2_artists"> Play For Us<br>Buy Tickets<br>Become a Volunteer<br>
+    <a href="Become_a_member.html">Become a Member</a></div>
 </div>
 <div id="sponsors_artists"> <strong><h2> Sponsors</h2> </strong> 
 <div id="sponsor1_artists"> <a href="http://www.townsville.qld.gov.au/Pages/default.aspx"><img src="pictures/1152800_1_M.png" width="60" height="86" alt=""/></a> </div>
