same as last commit (forgot to connect 1 link)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div id="BECOME_A_VOLUNTEER_1">Become a Volunteer</div>
       <div id="PLAY_FOR_US_1">Play For Us</div>
       
- <div id="body1_bottom_text">If you have other obligations but would still like to help out, <strong><u><a href="Become a Member/Become_a_member.html">become a member</a></u></strong> to <br>support us and get up to a <strong>50% discount on tickets</strong>
+ <div id="body1_bottom_text">If you have other obligations but would still like to help out, <strong><u><a href="Become_a_member.html">become a member</a></u></strong> to <br>support us and get up to a <strong>50% discount on tickets</strong>
  </div>
  </div>
  </body1> 
